Another pass to clean up Sonar and compiler warnings for maintainability